stylesheet.css
/* ... */
.t-cubic #nextActionsList::-webkit-scrollbar-button:vertical:decrement, .t-cubic #curActionsList::-webkit-scrollbar-button:vertical:decrement, .t-cubic .showthis2::-webkit-scrollbar-button:vertical:decrement {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.t-cubic #nextActionsList::-webkit-scrollbar-button:vertical:increment, .t-cubic #curActionsList::-webkit-scrollbar-button:vertical:increment, .t-cubic .showthis2::-webkit-scrollbar-button:vertical:increment {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.t-cubic .actionContainer {
    margin: -0.5px -0.5px;
    border: 1px solid var(--default-border);
}

.t-cubic .actionHighlight {
    border: 1px solid var(--default-border);
    border-radius: 0px;
}

.t-cubic .travelContainer {
    margin-top: -0.5px;
    border: 1px solid var(--default-border);
}

.t-cubic .storyContainer {
    border-radius: 0;
    margin: -0.5px -0.5px;
    box-shadow: none;
    text-shadow: none;
}

.t-cubic .locked {
    border-radius: 0;
}

.t-cubic .capped {
    border-radius: 0;
}

select.bold {
    text-align: center;
    border: 1px solid transparent;
    background: var(--default-background);
    font-size: 1.14286rem;
    font-family: Arial, Helvetica, serif;
    padding: 0;
    color: var(--default-color);
}

select.bold:focus {
    border-color: var(--town-select-focus-border);
}

@media (min-width: 811px) and (max-width: 1300px) {
    :root.responsive:has(body.ui-preset-classic) {
        height: 100%;
        overflow: clip;
        contain: strict;
    }

    .responsive body.ui-preset-classic {
        min-width: 0 !important;
        overflow: hidden !important;
        height: 100vh;
        grid:
            "header header header" max-content
            "actions town stats" minmax(0, 1fr)
            / minmax(280px, 1.08fr) minmax(400px, 1.58fr) minmax(280px, 1.16fr) !important;
    }

    .responsive body.ui-preset-classic main {
        display: contents;
    }

    .responsive body.ui-preset-classic #timeInfo {
        grid-area: header;
        display: flex;
    }

    .responsive body.ui-preset-classic #actionsColumn {
        grid-area: actions;
        margin: 0;
    }

    .responsive body.ui-preset-classic #townColumn {
        display: flex;
        grid-area: town;
    }

    .responsive body.ui-preset-classic #shortTownColumn {
        display: none;
    }

    .responsive body.ui-preset-classic #statsColumn {
        grid-area: stats;
    }

    .responsive body.ui-preset-classic #actionLogContainer {
        display: none;
    }
}

.responsive body.ui-preset-classic #timeInfo {
    box-sizing: border-box;
    width: 100%;
}

